--- a/index.html
+++ b/index.html
@@ -2,93 +2,110 @@
 <html lang="ar">
 <head>
   <meta charset="UTF-8" />
-  <title>🔍 نظام Mines الذكي - Web OCR</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>نظام Web OCR الذكي</title>
   <style>
     body {
       font-family: 'Tajawal', sans-serif;
-      background: #f8f9fa;
+      background: #f2f2f2;
+      direction: rtl;
       text-align: center;
       padding: 20px;
     }
     h1 {
       color: #2c3e50;
     }
+    .section {
+      background: white;
+      margin-top: 20px;
+      padding: 15px;
+      border-radius: 8px;
+      box-shadow: 0 0 5px rgba(0,0,0,0.1);
+    }
     input[type="file"] {
       margin: 20px 0;
     }
     #result {
-      background: white;
-      padding: 15px;
-      border-radius: 8px;
-      box-shadow: 0 0 5px rgba(0,0,0,0.1);
-      margin-top: 20px;
-      direction: rtl;
+      white-space: pre-wrap;
+      text-align: right;
+      color: #333;
     }
-    .safe {
-      color: green;
-      font-weight: bold;
-    }
-    .danger {
-      color: red;
-      font-weight: bold;
+    select {
+      padding: 10px;
+      font-size: 16px;
     }
   </style>
 
-  <!-- مكتبة OCR -->
+  <!-- Tesseract.js -->
   <script src="https://cdn.jsdelivr.net/npm/tesseract.js@2.1.5/dist/tesseract.min.js"></script>
 
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/9.24.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.24.0/firebase-database-compat.js"></script>
 </head>
+
 <body>
-  <h1>💣 نظام Mines الذكي</h1>
+  <h1>🔍 نظام Web OCR الذكي</h1>
 
-  <input type="file" id="imageInput" accept="image/*" />
-  <div id="result">📸 قم برفع صورة من لعبة Mines لبدء التحليل...</div>
+  <div class="section">
+    <label for="gameSelect">اختر اللعبة:</label><br/>
+    <select id="gameSelect">
+      <option value="aviator">Aviator</option>
+      <option value="crash">Crash</option>
+      <option value="mines">Mines</option>
+      <option value="dice">Dice</option>
+      <option value="plinko">Plinko</option>
+      <option value="blackjack">Blackjack</option>
+      <option value="roulette">Roulette</option>
+      <option value="wheel">Wheel</option>
+    </select>
 
+    <input type="file" id="imageInput" accept="image/*" />
+    <div id="result">نتائج التحليل ستظهر هنا...</div>
+  </div>
+
+  <!-- Firebase إعداد -->
   <script>
-    // تحليل Mines الذكي
-    function analyzeMinesText(text) {
-      const resultDiv = document.getElementById('result');
-      const rows = text.split('\n').filter(line => line.trim() !== "");
-      
-      const safeCells = [];
-      const dangerCells = [];
+    const firebaseConfig = {
+      apiKey: "AIzaSyCijdq8Ji8L9e3dGoHK72LaAUWsz_e5V6Y",
+      authDomain: "web-ocr-ai.firebaseapp.com",
+      projectId: "web-ocr-ai",
+      storageBucket: "web-ocr-ai.firebasestorage.app",
+      messagingSenderId: "847993614836",
+      appId: "1:847993614836:web:a2b6e91c94426dd01549a1",
+      measurementId: "G-TTQZPVWFL4"
+    };
+    const app = firebase.initializeApp(firebaseConfig);
+    const database = firebase.database();
+  </script>
 
-      rows.forEach((line, rowIndex) => {
-        const cells = line.split('');
-        cells.forEach((char, colIndex) => {
-          const pos = `(${rowIndex+1}, ${colIndex+1})`;
-          if (char === '💣' || char === 'X') {
-            dangerCells.push(pos);
-          } else if (char === '.' || char === '0' || char === '⬜') {
-            safeCells.push(pos);
-          }
-        });
+  <!-- تحليل OCR -->
+  <script>
+    function saveOCRResult(result, game) {
+      const timestamp = Date.now();
+      database.ref(`ocr-results/${game}/${timestamp}`).set({
+        text: result,
+        game: game,
+        time: new Date().toLocaleString()
       });
-
-      // عرض التوصيات
-      resultDiv.innerHTML = `
-        <b>✅ أماكن الضغط الآمن:</b><br>
-        <span class="safe">${safeCells.join(', ')}</span><br><br>
-        <b>⚠️ الأماكن الخطيرة (محتملة):</b><br>
-        <span class="danger">${dangerCells.join(', ')}</span>
-      `;
     }
 
     document.getElementById('imageInput').addEventListener('change', function(e) {
       const file = e.target.files[0];
+      const selectedGame = document.getElementById("gameSelect").value;
+      const resultDiv = document.getElementById('result');
+
       if (!file) return;
 
-      const resultDiv = document.getElementById('result');
-      resultDiv.innerHTML = "⏳ جاري التحليل...";
+      resultDiv.innerHTML = "⏳ جاري تحليل الصورة ...";
 
       Tesseract.recognize(
         file,
-        'eng',
+        'ara',
         { logger: m => console.log(m) }
       ).then(({ data: { text } }) => {
-        console.log("OCR Result:", text);
-        analyzeMinesText(text);
+        resultDiv.innerHTML = `📄 <b>النص المستخرج:</b><br>${text}`;
+        saveOCRResult(text, selectedGame);
       }).catch(err => {
         resultDiv.innerHTML = "❌ حدث خطأ أثناء التحليل.";
         console.error(err);
